# SmolSlimeConfigurator

./: .gitignore  SmolSlimeConfigurator.py  SmolSlimeConfigurator.spec  pyproject.toml
.github/workflows/: build.yml
