[project]
name = "smolslimeconfigurator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "customtkinter>=5.2.2",
    "nrfutil>=6.1.7",
    "pyinstaller>=6.16.0",
    "pyserial>=3.5",
    "requests>=2.32.5",
]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64' and platform_machine == 'arm64'"
]